--- a/Portfolio/PersoalWebsite/index.html
+++ b/Portfolio/PersoalWebsite/index.html
@@ -27,6 +27,12 @@
         href="https://media.licdn.com/dms/image/D5603AQHmsxjc97mkXQ/profile-displayphoto-shrink_800_800/0/1689578076140?e=1695254400&v=beta&t=M38lAcjuUzJvHsHcGjU-dHaUKsyTmN3WfiC7EYz6wEg"
         type="
         image/gif" sizes="16x16">
+
+    <style>
+        html{
+            scroll-behavior:smooth;
+        }
+    </style>
 </head>
 
 <body>
@@ -50,13 +56,13 @@
                                 <a class="nav-link text-white" href="#">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Services</a>
+                                <a class="nav-link text-white" href="#skills">Skills</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Experience</a>
+                                <a class="nav-link text-white" href="#education">Education</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="#">Contact Me</a>
+                                <a class="nav-link text-white" href="#contact">Contact Me</a>
                             </li>
 
 
@@ -89,7 +95,7 @@
 
     <section class="bg-light p-4 mt-4">
         <div class="container">
-            <h1 class="text-center mt-5">Skills</h1>
+            <h1 class="text-center mt-5" id="skills">Skills</h1>
             <div class="row">
                 <div class="col-md-4 mt-3">
                     <div class="card text-center p-3" style="width: 18rem;">
@@ -165,7 +171,7 @@
 
     <section class="bg-light p-4 mt-4">
         <div class="container">
-            <h1 class="text-center mt-5">Education</h1>
+            <h1 class="text-center mt-5 " id="education">Education</h1>
             <div class="row">
                 <div class="col-md-4 mt-3">
                     <div class="card text-center p-3 " style="width: 18rem;">
@@ -241,7 +247,7 @@
 
     <section>
         <div class="container">
-            <h3 class="text-center mt-4">Contact Me</h3>
+            <h3 class="text-center mt-4" id="contact">Contact Me</h3>
             <div class="row">
 
 
